komga/base/deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "komga"
spec:
  strategy:
    type: "Recreate"
  selector:
    matchLabels:
      app: "komga"
  template:
    metadata:
      labels:
        app: "komga"
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: "komga"
          image: "gotson/komga:0.157.5"
          resources:
            limits:
              memory: "500Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: "/config"
              name: "komga-config"
            - mountPath: "/data"
              name: "media-pvc"
          startupProbe:
            httpGet:
              port: 8080
            initialDelaySeconds: 150
            failureThreshold: 20
            periodSeconds: 1
          livenessProbe:
            httpGet:
              port: 8080
            failureThreshold: 5
            periodSeconds: 2
      volumes:
        - name: "komga-config"
          persistentVolumeClaim:
            claimName: "komga-config"
        - name: "media-pvc"
          persistentVolumeClaim:
            claimName: "media-pvc"
