komga/base/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "komga"
spec:
  selector:
    app: "komga"
  ports:
    - port: 8080
      targetPort: 8080
